# WhatsFinance

./: .env.example  .gitignore  .mcp.json  README.md  ai_parser.py  app.py  commands.py  conversation_state.py  db.py  pyproject.toml  render.yaml  requirements.txt  run.py  templates_web.py  web_routes.py
.agents/workflows/: git-workflow.md
supabase/migrations/: 20250319000000_init_whatsfinance.sql  20250319140000_bot_conversation_state.sql  20250319160000_handle_transaction_account_and_date.sql  20250319190000_users_verification_security.sql
tests/: test_db.py
whatsfinance/: __init__.py  ai_parser.py  app.py  commands.py  config.py  conversation_state.py  db.py  templates_web.py  web_security.py
whatsfinance/bot/: __init__.py  flow.py  handlers.py  keyboards.py  telegram_client.py
whatsfinance/routes/: __init__.py  web_routes.py
whatsfinance/services/: __init__.py  ai_service.py  conversation_service.py  heuristic_parser.py  intent_normalize.py  intent_pipeline.py  llm_prompts.py  llm_providers.py  multimodal_input.py  structured_schema.py  transaction_service.py
